k8s/load-generator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: arc-load-generator
  namespace: arc-store
spec:
  replicas: 1
  selector:
    matchLabels:
      app: arc-load-generator
  template:
    metadata:
      labels:
        app: arc-load-generator
    spec:
      containers:
        - name: arc-load-generator
          image: jhendrick/arc-load-generator:latest
          imagePullPolicy: Always
