k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: arc-backend
  namespace: arc-store
spec:
  replicas: 1
  selector:
    matchLabels:
      app: arc-backend
  template:
    metadata:
      labels:
        app: arc-backend
    spec:
      containers:
        - name: arc-backend
          image: jhendrick/arc-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /api/products
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: arc-backend
  namespace: arc-store
spec:
  selector:
    app: arc-backend
  ports:
    - port: 8080
      targetPort: 8080
