k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: arc-frontend
  namespace: arc-store
spec:
  replicas: 1
  selector:
    matchLabels:
      app: arc-frontend
  template:
    metadata:
      labels:
        app: arc-frontend
    spec:
      containers:
        - name: arc-frontend
          image: jhendrick/arc-frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: arc-frontend
  namespace: arc-store
spec:
  selector:
    app: arc-frontend
  ports:
    - port: 80
      targetPort: 80
