k8s/tax-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tax-service
  namespace: tax-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tax-service
  template:
    metadata:
      labels:
        app: tax-service
    spec:
      containers:
        - name: tax-service
          image: jhendrick/tax-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
          readinessProbe:
            httpGet:
              path: /api/tax-rate?taxCode=ELECTRONICS&state=CA
              port: 8081
            initialDelaySeconds: 10
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: tax-service
  namespace: tax-service
spec:
  selector:
    app: tax-service
  ports:
    - port: 8081
      targetPort: 8081
